--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -13,9 +13,18 @@ body{
   font-weight: 300;
   color:$grayishBlue;
   line-heigh:1.3;
+  
+  &.noscroll{
+    overflow: hidden;
+  }
 }
 a, a:visited, a:hover{
   text-decoration: none;
+}
+// spacing
+.container{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 //flexbox
 .flex{
