--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,35 +1,95 @@
-.header{
-  nav{
-    padding: 1.0625rem 1.5rem;
-  }
-  &__logo{
-    img{
-      width: 8.8125rem;
-      height: 1.375rem;
-    }
-  }
-  &__menu{//mobie menu
-    > span{
-      display:block;
-      width:26px;
-      height: 2px;
-      background-color: $darkBlue;
-      &:not(:last-child){
-        margin-bottom:3px ;
+.header {
+
+  //hamburger open styles
+  &.open {
+
+    .header__toggle {
+      >span:first-child {
+        transform: rotate(45deg);
+      }
+
+      >span:nth-child(2) {
+        opacity: 0;
+      }
+
+      >span:last-child {
+        transform: rotate(-45deg);
+
       }
     }
   }
 
-  &__links{
+
+  .overlay {
+    opacity: 0;
+    position: fixed;
+    top:0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-image: linear-gradient($darkBlue, transparent);
+  }
+
+  nav {
+    position: relative;
+    background-color: $white;
+    padding-top: 1.0625rem;
+    padding-bottom: 1.0625rem;
+  }
+
+  &__logo {
+    img {
+      width: 8.8125rem;
+      height: 1.375rem;
+    }
+  }
+
+  &__toggle {
+
+    //mobie menu
+    >span {
+      display: block;
+      width: 26px;
+      height: 2px;
+      background-color: $darkBlue;
+      transition: all 300ms ease-in-out;
+      transform-origin: 3px 1px;
+
+      &:not(:last-child) {
+        margin-bottom: 5px;
+      }
+    }
+
+  }
+  &__menu{
+    position: absolute;
+    width: calc(100% - 3rem);
+    left: 50%;
+    transform: translateX(-50%);
+    background: $white;
+    margin-top: 1.5rem;
+    padding: 1.625rem;
+    border-radius: 5px;
     a{
+      padding: 0.625rem;
+      display: block;
+      color: $darkBlue;
+      text-align: center;
+    }
+  }
+
+  &__links {
+    a {
       position: relative;
-      font-size:$font-sm ;
-       color:$grayishBlue;
+      font-size: $font-sm;
+      color: $grayishBlue;
       transition: color 300ms ease-in-out;
-       &:not(:last-child){
+
+      &:not(:last-child) {
         margin-right: 32px;
-       }
-      &::before{
+      }
+
+      &::before {
         content: "";
         display: block;
         position: absolute;
@@ -37,23 +97,27 @@
         left: 0;
         right: 0;
         bottom: -30px;
-        background: linear-gradient(to Right ,$limeGreen,$brightCyan);
+        background: linear-gradient(to Right, $limeGreen, $brightCyan);
         opacity: 0;
-        transition: opacity 300ms ease-in-out ;
+        transition: opacity 300ms ease-in-out;
       }
-       &:hover{
-         color:$darkBlue;
-         &::before{
-           opacity: 1;
-         }
-       }
+
+      &:hover {
+        color: $darkBlue;
+
+        &::before {
+          opacity: 1;
+        }
+      }
     }
   }
-  &__cta{
-    font-size:$font-sm ;
-    color:$white;
+
+  &__cta {
+    font-size: $font-sm;
+    color: $white;
     transition: opacity 300ms ease-in-out;
-    &:hover{
+
+    &:hover {
       opacity: 0.75;
     }
   }
