hero section complate

--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -10,3 +10,5 @@ $white: hsl(0, 0%, 100%);
 // fonst sizes
 $font-sm: 0.875rem;//14px
 $font-med:1.25rem;//18px
+$font-lg:1.25rem;
+$font-xlg:3.25rem;
