--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -12,19 +12,53 @@ body{
   font-size: $font-med;
   font-weight: 300;
   color:$grayishBlue;
-  line-heigh:1.3;
-  
+  line-height:1.3;
+  @include breakpoint-up(large){
+    font-size: $font-med;
+  }
   &.noscroll{
     overflow: hidden;
   }
 }
+
+h1,h2,h3{
+  margin-top: 0;
+}
+
 a, a:visited, a:hover{
   text-decoration: none;
 }
 // spacing
 .container{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  max-width: 69.375rem;
+  margin: 0 auto;
+
+  &--pall{
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+  &--py{
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
+  }
+  &--px{
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+  }
+  &--pt{
+    padding-top: 2.25rem;
+  }
+  &--pr{
+    padding-right: 1.5rem;
+  }
+  &--pb{
+    padding-bottom: 2.25rem;
+  }
+  &--pl{
+    padding-left: 1.5rem;
+  }
 }
 //flexbox
 .flex{
@@ -49,6 +83,15 @@ button, .button{
   cursor: pointer;
   color: $white;
   font-weight: 400;
+  display: inline-block;
+  font-size: $font-sm;
+  color: $white;
+  transition: opacity 300ms ease-in-out;
+
+  &:hover {
+    opacity: 0.75;
+  }
+
 }
 
 //Visibility
