--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -25,6 +25,19 @@ h1,h2,h3{
   margin-top: 0;
 }
 
+h2{
+  color: $darkBlue;
+  font-weight: 300;
+  font-size: 1.875rem;
+  margin-bottom: 1.5625rem;
+
+  @include breakpoint-up(large){
+    font-size: 2.25rem;
+    margin-bottom: 2.25rem;
+  }
+
+}
+
 a, a:visited, a:hover{
   text-decoration: none;
 }
