--- a/app/scss/_article.scss
+++ b/app/scss/_article.scss
@@ -1,5 +1,13 @@
 .articles{
     background-color: $veryLightGray;
+    padding-top: 1.8125rem;
+    padding-bottom:  4rem;
+    @include breakpoint-up(large) {
+        padding-bottom:  5.125rem;
+    }
+    @include breakpoint-up(large) {
+        padding-top: 4.25rem;
+    }
 }
 
 .article{
@@ -10,6 +18,7 @@
 
     &__grid{
         display: grid;
+        gap: 1.875rem;
         grid-template-columns: 1fr;
         @include breakpoint-up(medium){
             grid-template-columns: repeat(2,1fr);
@@ -20,26 +29,58 @@
     }
 
     &__item{
-
-    }
+        
+        box-shadow: 0px 3px 12px rgba(0,0,0,0.15);
+        background-color: $white;
+        overflow: hidden;
+        border-radius:0.3125rem;
+        -webkit-border-radius:0.3125rem;
+        -moz-border-radius:0.3125rem;
+        -ms-border-radius:0.3125rem;
+        -o-border-radius:0.3125rem;
+        transition: all 150ms ease-in-out;
+        -webkit-transition: all 150ms ease-in-out;
+        -moz-transition: all 150ms ease-in-out;
+        -ms-transition: all 150ms ease-in-out;
+        -o-transition: all 150ms ease-in-out;
+        &:hover{
+            transform: scale(1.05);
+            -webkit-transform: scale(1.05);
+            -moz-transform: scale(1.05);
+            -ms-transform: scale(1.05);
+            -o-transform: scale(1.05);
+}
+}
 
     &__image{
+        height: 12.5rem;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
 
-    }
+}
 
     &__text{
-
+        padding:1.875rem 1.875rem 2.5rem 1.875rem;
+        color: $grayishBlue;
+        @include breakpoint-up(large){
+            padding:1.875rem 1.5625rem;
+        }
     }
 
     &__author{
-
+        font-size: 0.625rem;
+        margin-bottom: 0.75rem;
     }
 
     &__title{
-
+        font-size: 1.0625rem;
+        line-height: 1.2;
+        color:$darkBlue;
+        margin-bottom: 0.5rem;
     }
 
     &__description{
-
+        font-size: 0.8125rem;
     }
 }
