--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -565,11 +565,26 @@ button:hover, .button:hover {
 
 .articles {
   background-color: #fafafa;
+  padding-top: 1.8125rem;
+  padding-bottom: 4rem;
+}
+
+@media (min-width: 64em) {
+  .articles {
+    padding-bottom: 5.125rem;
+  }
+}
+
+@media (min-width: 64em) {
+  .articles {
+    padding-top: 4.25rem;
+  }
 }
 
 .article__grid {
   display: -ms-grid;
   display: grid;
+  gap: 1.875rem;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
 }
@@ -586,5 +601,64 @@ button:hover, .button:hover {
     -ms-grid-columns: (1fr)[4];
         grid-template-columns: repeat(4, 1fr);
   }
+}
+
+.article__item {
+  -webkit-box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
+  background-color: white;
+  overflow: hidden;
+  border-radius: 0.3125rem;
+  -webkit-border-radius: 0.3125rem;
+  -moz-border-radius: 0.3125rem;
+  -ms-border-radius: 0.3125rem;
+  -o-border-radius: 0.3125rem;
+  transition: all 150ms ease-in-out;
+  -webkit-transition: all 150ms ease-in-out;
+  -moz-transition: all 150ms ease-in-out;
+  -ms-transition: all 150ms ease-in-out;
+  -o-transition: all 150ms ease-in-out;
+}
+
+.article__item:hover {
+  transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  -o-transform: scale(1.05);
+}
+
+.article__image {
+  height: 12.5rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.article__text {
+  padding: 1.875rem 1.875rem 2.5rem 1.875rem;
+  color: #9698a6;
+}
+
+@media (min-width: 64em) {
+  .article__text {
+    padding: 1.875rem 1.5625rem;
+  }
+}
+
+.article__author {
+  font-size: 0.625rem;
+  margin-bottom: 0.75rem;
+}
+
+.article__title {
+  font-size: 1.0625rem;
+  line-height: 1.2;
+  color: #2d314d;
+  margin-bottom: 0.5rem;
+}
+
+.article__description {
+  font-size: 0.8125rem;
 }
 /*# sourceMappingURL=style.css.map */
