--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -13,6 +13,7 @@ body{
   font-weight: 300;
   color:$grayishBlue;
   line-height:1.3;
+  overflow-x: hidden;
   @include breakpoint-up(large){
     font-size: $font-med;
   }
